# opencv

./: .gitignore  CMakeLists.txt  README.md  build  codelite.project  opencv_codelite.workspace  run
src/: iofill.cpp  iorect.cpp  main.cpp  main.h
